# fastapi-satella-metrics

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py
fastapi_satella_metrics/: __init__.py  prometheus_exporter.py
tests/: requirements.txt  test_fastapi_satella_metrics.py
