# coding: utf-8
[metadata]
name = fastapi-satella-metrics
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Norbert Ozga
license_files =
    LICENSE.md
author_email = norbert.ozga@dronehub.ai
description = A library for attaching Satella metrics to FastAPI
url = https://github.com/Dronehub/fastapi-satella-metrics
project_urls =
	Code = https://github.com/Dronehub/fastapi-satella-metrics
	Issue tracker = https://github.com/Dronehub/fastapi-satella-metrics/issues
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0

[options]
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*
install_requires =
    satella
    fastapi
    starlette
packages = find:

[options.packages.find]
exclude =
    tests
